--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 license = "GPL-3.0-or-later"
 
 [dependencies]
+clap = { version = "4.5.4", features = ["derive", "color"] }
+txt_otp = "2.0.0"
 
 [lints.rust]
 unsafe_code = "forbid"
